@@ -181,13 +181,14 @@ are generated if and only if they are also in `message-draft-headers'.")
 	   (gnus-get-new-news-hook nil)
 	   (inhibit-read-only t))
       (gnus-group-get-new-news-this-group nil t)
-      (dolist (group groups)
-	(unless (and gnus-permanently-visible-groups
-		     (string-match gnus-permanently-visible-groups
-				   group))
-	  (gnus-group-goto-group group)
-	  (when (zerop (gnus-group-group-unread))
-	    (gnus-delete-line)))))))
+      (save-excursion
+	(dolist (group groups)
+	  (unless (and gnus-permanently-visible-groups
+		       (string-match gnus-permanently-visible-groups
+				     group))
+	    (gnus-group-goto-group group)
+	    (when (zerop (gnus-group-group-unread))
+	      (gnus-delete-line))))))))
 
 (deffoo nndraft-request-associate-buffer (group)
   "Associate the current buffer with some article in the draft group."
