@@ -1,3 +1,8 @@
+2012-01-04  Leo  <sdl.web@gmail.com>
+
+	* nndraft.el (nndraft-update-unread-articles): Don't move point around
+	in the group buffer.
+
 2012-01-04  Julien Danjou  <julien@danjou.info>
 
 	* nnimap.el (nnimap-update-info): Fix an error when all articles UIDs
